# smol

./: .gitignore  Pipfile  README.md  banner.txt  gemini.py  gemlog-from-mail.py  pyproject.toml  requirements.txt  smol.properties  smol.py  smol.sh
features/: first_run.feature  generate_default_config.feature  posting_from_email.feature
remote/aws/: smol-aws.sh
src/smol/: smol.py
src/smol/resources/: config.ini  template.gmi
tests/: test_smol.py
tests/resources/: mail
