[project]
name = "smol"
version = "0.0.1"
authors = [
  { name="diggy" },
]
description = "A gemlog generator"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GPL 3.0",
    "Operating System :: OS Independent",
]
[project.urls]
Homepage = "https://github.com/diggydev/smol"
Issues = "https://github.com/diggydev/smol/issues"
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
